--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "url": "git@github.com:Adamwu1992/svga-loader.git"
   },
   "homepage": "",
+  "bin": {
+    "svga": "./bin/svga.js"
+  },
   "files": [
-    "src"
+    "src",
+    "bin"
   ],
   "keywords": [
     "svga",
@@ -18,16 +22,12 @@
   "author": "Adam Wu",
   "license": "MIT",
   "dependencies": {
+    "commander": "^5.1.0",
     "loader-utils": "^2.0.0",
     "mime-types": "^2.1.27",
     "pako": "^1.0.11",
     "protobufjs": "^6.9.0",
     "schema-utils": "^2.6.6"
   },
-  "devDependencies": {
-    "html-webpack-plugin": "^4.3.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
-  }
+  "devDependencies": {}
 }
